Fix error UI for vertical-align elements

--- a/src/app.scss
+++ b/src/app.scss
@@ -844,3 +844,7 @@ span.badge-notification[data-badge]::after {
   margin-bottom: 0px;
   height: 3rem;  
 }
+
+.user-info-margin {
+  margin-top: -8px !important;
+}
